# quizard

./: .gitignore  Dockerfile  Pipfile  README.md  completion_messages.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  example_messages.py  flash_card.py  flash_card_deck.py  flashcard_generator.py  flashcard_service.py  global_helpers.py  log.txt  log_anton.txt  logf.txt  main.py  models.py  pyproject.toml  requirements.txt  run_config.json  run_config.yaml  test_runner.py  text_split.py
backend/: .gitignore  Dockerfile  Dockerfile.app  Dockerfile.celery  READMD.md  README.md  api-spec.yaml  app.py  compose.yml  docker-compose.yml  entrypoint.sh  generate_flashcards.py  pyproject.toml  requirements.txt
backend/.github/workflows/: caprover-deploy.yml
backend/config/: app_config.yaml  logging_config.py  quizard_config.yaml  run_config.yaml  test_config.yaml
backend/input/bullet_point_summary/: DOE_GER.txt  ZuWi_GER.txt
backend/input/text_summary/: genetics_ENG.txt
backend/local_dev/: run.py
backend/local_dev/output/: response.txt  run33a-backend_cleanup.csv  test1  test1.txt  test11a-first_user_lang.csv  test12a-open_ended.csv  test14a-first_user_lang.csv  test1f.csv  test2.txt  test22a-ugly_format.csv  test24a-long_text_bio  test25a-new_api  test26a-140page pp summary.csv  test29a-78p_economy_bp_summary.csv  test2f.csv  test4a-run_config.csv  test4f.csv  test6a-improved_prompts.csv  test7f.csv  test8a-reduced_prompt_size.csv  test9a-reduced_overlap.csv  test9f-genetics-4k.csv
backend/logs/: log_anton.txt  logs.txt
backend/src/: __init__.py  app.py  container.py  generate_flashcards.py  injector.py  log_anton.txt  main.py  test.py
backend/src/app/: app.py
backend/system_prompts/: autodetect_lang_bottom.txt  autodetect_lang_top.txt  lang_instruction.txt  specific_lang_bottom.txt  specific_lang_top.txt
backend/tests/: conftest.py  test_flashcard_service.py  test_flask_api.py  test_runner.py
backend/tests_depricated/: test_runner_depricated.py
(+342 files in other folders)
