[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["moritzsattl <moritz.sattlegger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
openai = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
